Bug 1170589 - Force decoder to use all allocated buffers. r=bwu